--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <link rel="manifest" href="manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+      // Professional Shim: Prevents "process is not defined" errors in browser
+      window.process = { env: { API_KEY: "" } };
+    </script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
             background-color: #0f172a;
             color: #f8fafc;
-            overflow: hidden; /* Prevents bounce on mobile */
+            overflow: hidden;
         }
         ::-webkit-scrollbar {
             width: 8px;
@@ -31,7 +35,6 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #475569;
         }
-        /* PWA standalone tweaks */
         @media (display-mode: standalone) {
             .pwa-hide { display: none; }
         }
@@ -39,17 +42,21 @@
 <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "recharts": "https://esm.sh/recharts@^3.6.0"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <!-- Entry point for Vite -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
