--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
 <body>
     <div id="root"></div>
     <!-- Entry point for Vite -->
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
