--- a/index.html
+++ b/index.html
@@ -15,23 +15,20 @@
             font-family: 'Inter', sans-serif;
             background-color: #0f172a;
             color: #f8fafc;
-            overflow: hidden;
+            overflow-x: hidden;
         }
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
         ::-webkit-scrollbar-track {
-            background: #1e293b;
+            background: #0f172a;
         }
         ::-webkit-scrollbar-thumb {
-            background: #334155;
-            border-radius: 4px;
+            background: #1e293b;
+            border-radius: 10px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #475569;
-        }
-        @media (display-mode: standalone) {
-            .pwa-hide { display: none; }
+            background: #334155;
         }
     </style>
 <script type="importmap">
@@ -51,7 +48,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- Entry point for Vite -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
